--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,16 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
+<script>
+  navigator.geolocation.getCurrentPosition(function (position) {
+  console.log(position)
+  if (position)
+  {
+    document.getElementById('gasLeak-address').value = position.coords.latitude + " " + position.coords.longitude;
+  }
+})
+
+</script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -61,7 +71,7 @@
   </div>
   <div class="form-group">
     <label for="gasLeak-address">Gas Leak Address</label>
-    <input type="text" id="gasLeak-address" class="form-control">
+    <input type="text" id="gasLeak-address" class="form-control" value="">
   </div>
   <div class="form-group">
     <label for="gasLeak-description">Description</label>
